--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="first-page page">
+            
+        </section>
+        <section class="second-page page">
+
+        </section>
+        <section class="third-page page">
+
+        </section>
+    </main>
 </body>
 </html>
