added main content

--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One:regular" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
-        <section class="first-page page">
-            
+        <section class="page bgc-red">
+            <div class="content">
+                <img src="img/01.png" alt="blue hoes">
+                <h1 class="yellow">IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
         </section>
-        <section class="second-page page">
-
+        <section class="page bgc-green">
+            <div class="content">
+                <img src="img/02.png" alt="white hoes">
+                <h1 class="yellow">IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
         </section>
-        <section class="third-page page">
-
+        <section class="page bgc-yellow">
+            <div class="content">
+                <img src="img/03.png" alt="all star">
+                <h1 class="green">IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
         </section>
     </main>
 </body>
