--- a/index.html
+++ b/index.html
@@ -9,24 +9,33 @@
 </head>
 <body>
     <main>
-        <section class="page bgc-red">
+        <section class="page bgc-red" id="blue-shoes">
             <div class="content">
                 <img src="img/01.png" alt="blue hoes">
                 <h1 class="yellow">IL NOSTRO MODELLO DI PUNTA</h1>
             </div>
         </section>
-        <section class="page bgc-green">
+        <section class="page bgc-green" id="white-shoes">
             <div class="content">
                 <img src="img/02.png" alt="white hoes">
                 <h1 class="yellow">IL NOSTRO MODELLO DI PUNTA</h1>
             </div>
         </section>
-        <section class="page bgc-yellow">
+        <section class="page bgc-yellow" id="converse">
             <div class="content">
                 <img src="img/03.png" alt="all star">
                 <h1 class="green">IL NOSTRO MODELLO DI PUNTA</h1>
             </div>
         </section>
     </main>
+    <div class="menu">
+        <ul>
+            <li>
+                <a href="#blue-shoes">1</a>
+                <a href="#white-shoes">2</a>
+                <a href="#converse">3</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
